testsuite/escript/classes/fail-super-base-no-ctor.err
fail-super-base-no-ctor.src:8:12: error: Base class 'BaseClass' does not define a constructor.