testsuite/escript/classes/fail-super-base-no-ctor.src
class BaseClass()
  function BaseClass( thizz, arg0 )
    thizz.base := arg0;
    return thizz; // TODO auto-return this in constructors, do not allow expression in ctor `return`s
  endfunction
endclass

class Foo( BaseClass )
  function Foo( this, arg0 )
    super( "bar" );
    this.child := arg0;
    return this; // TODO auto-return this in constructors, do not allow expression in ctor `return`s
  endfunction
endclass

var obj := Foo( "foo" );
print( obj );
